--- a/comments-app-api/package.json
+++ b/comments-app-api/package.json
@@ -36,6 +36,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.6",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.6",
@@ -46,6 +47,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sanitize-html": "^2.13.1",
+    "sharp": "^0.33.5",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.0",
@@ -63,8 +66,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^8.0.0",
+    "i": "^0.3.7",
     "jest": "^29.5.0",
     "lint-staged": "^15.2.10",
+    "npm": "^10.9.0",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
