--- a/comments-app-client/package.json
+++ b/comments-app-client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dompurify": "^3.1.7",
+    "lightbox2": "^2.11.5",
     "marked": "^14.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
