--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         - '5001:5001'
     depends_on:
       - postgres
+      - redis
   pgadmin4:
     image: dpage/pgadmin4
     container_name: lde.pgadmin4
@@ -33,6 +34,11 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - 5433:5432
+  redis:
+    image: redis
+    container_name: lde.redis
+    ports:
+      - 6380:6379
 networks:
   default:
     driver: bridge
