--- a/comments-app-api/package.json
+++ b/comments-app-api/package.json
@@ -68,6 +68,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
